Fix app store buttons on small screen; Shorten Text Editor header; Shorten intro text; Add Google Profiles authorship tag; Give Twitter button more horizontal room

--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,11 @@ margin-top:-50px;
     box-shadow: inset 0 15px 10px rgba(0,0,0,0.6);
     -webkit-box-shadow: inset 0 15px 10px rgba(0,0,0,0.6);
     -moz-box-shadow:inset 0 15px 10px rgba(0,0,0,0.6);
+	color:#999;
 }
 
 .footer a {
-	color:white;
+	color:#eee;
 	font-weight:normal;
 }
 
@@ -111,9 +112,10 @@ margin-top:-50px;
 .footer.footer-btm {
     background:#151515;
     border-top: 1px solid #222;
-	color:#555;
+	color:#999;
 }
 
+/* Responsive */
 img {
   max-width: 100%;
   height: auto;
